# internal/models/federation_renewal_response_data.go
@@ -1,0 +1,11 @@
+package models
+
+import "time"
+
+type FederationRenewalResponseData struct {
+	FederationContextId string `json:"federationContextId"`
+
+	FederationExpiryDate time.Time `json:"federationExpiryDate"`
+
+	FederationRenewalDate time.Time `json:"federationRenewalDate"`
+}
